--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Video Player</title>
+    <meta name="description" content="Simple video player for the web.">
+
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://salomvary.github.io/web-video-player/screenshot.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1600">
+    <meta property="og:image:height" content="836">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://salomvary.github.io/web-video-player/screenshot.png">
   </head>
   <body>
     <div id="app"></div>
