Add Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta property="og:image:width" content="1600">
     <meta property="og:image:height" content="836">
 
+    <meta name="twitter:title" content="Web Video Player">
+    <meta name="twitter:description" content="Simple video player for the web.">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://salomvary.github.io/web-video-player/screenshot.png">
   </head>
